<resources>
    <string name="app_name">Dictionary</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Dictonary</string>
    <string name="nav_header_subtitle">NguyenHuuPhat</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_ev">English-Vietnamese</string>
    <string name="menu_ve">Vietnamese-English</string>
    <string name="menu_favor">Favorites</string>
    <string name="menu_yword">Your Words</string>
    <string name="menu_flashcard">Flashcard</string>
    <string name="menu_pronunciation">Pronunciation</string>
    <string name="hint">Search</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
